# waybar_json

./: .gitignore  CMakeLists.txt  README.md  example.c  waybar_json.c  waybar_json.h
